[package]
name = "postgres_array"
version = "0.11.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Array support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-array"

[dependencies]
bytes = "1.0"
fallible-iterator = "0.2"
postgres-types = { git = "https://github.com/chandr-andr/rust-postgres.git", branch = "psqlpy", features = [
    "derive",
] }
postgres-protocol = { git = "https://github.com/chandr-andr/rust-postgres.git", branch = "psqlpy" }

[dev-dependencies]
postgres = { git = "https://github.com/chandr-andr/rust-postgres.git", branch = "psqlpy" }
